@@ -130,8 +130,8 @@
                         </goals>
                         <configuration>
                             <skip>false</skip>
-                            <!--<forkCount>2C</forkCount>-->
-                            <argLine>-Xmx512m</argLine>
+                            <forkCount>2C</forkCount>
+                            <argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
                             <includes>
                                 <include>**/When*.*</include>
                                 <include>**/*Test.*</include>
